<resources>
    <!--<string name="app_name">RapiPay Agent App</string>-->
    <string name="permission_read_phone_state_rationale">permission_read_phone_state_rationale</string>
    <string name="permissions_not_granted_read_phone_state">Cannot Proceed without allowing permissions!</string>

    <string name="notification_error_ssl_cert_invalid">Please click on Continue to proceed!</string>


    <!--  android:fontFamily="sans-serif"           // roboto regular
    android:fontFamily="sans-serif-light"     // roboto light
    android:fontFamily="sans-serif-condensed" // roboto condensed
    android:fontFamily="sans-serif-black"     // roboto black
    android:fontFamily="sans-serif-thin"      // roboto thin (android 4.2)
    android:fontFamily="sans-serif-medium"    // roboto medium (android 5.0)
-->
    <string name="dialog_button_ok">OK</string>
    <string name="baseurl"></string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="prompt_Internet">Internet is not Running</string>

    <string name="msg_manual_otp">OTP on SMS Sent, Please Enter the Code</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">Enter</string>
    <string name="msg_resent_otp">Click here to re-sent OPT request  </string>
    <string name="Alert">Alert</string>


    <string name="p_powerdby">Powered by</string>
    <string name="p_cname">Virgosoft IT Service PVT. LTD.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_accountname">Account Name</string>
    <string name="title_accountno">Bank Account No.</string>
    <string name="title_notification">Notification</string>

    <string name="btnsubmit">Submit</string>
    <string name="reciept_details">Reciept Details</string>
    <string name="btnscasubmit">Scan</string>
    <string name="btotp">*****</string>
    <string name="btnupdate">Request for Credit</string>
    <string name="btnhist">Details</string>
    <string name="btnsearch">Search</string>
    <string name="btnsender">Add Sender</string>
    <string name="btnfund">Fund Transfer</string>
    <string name="btnben">Add Beneficiary</string>
    <string name="btnverify">Verify/Add Account</string>
    <string name="btnverifywal">Verify/Add Beneficiary</string>
    <string name="walletbtnverify">Verify Account</string>
    <string name="p_accounttr">Account Transfer</string>
    <string name="p_benaadd">Add New Beneficiary</string>
    <string name="p_bendd">Add Beneficiary</string>

    <string name="p_bentrans">Beneficiary Details</string>
    <string name="p_lasttrans">Last Transaction Details</string>
    <string name="p_nethead">Network Transfer - Tap to Transfer</string>
    <string name="p_currenttrans">Latest Transaction Details</string>
    <string name="p_pendingtrans">Pending Transaction Details (Click to Get Status)</string>
    <string name="p_refundtrans">Refund Transaction Details (Click to Get Status)</string>


    <string name="p_userid">Enter Mobile No.</string>
    <string name="p_cususerid">Enter Customer Mobile No.</string>
    <string name="p_mobile">Mobile No.</string>
    <string name="p_optname">Operator Name</string>
    <string name="p_contactid">Enter Number</string>
    <string name="p_email">Enter Email</string>
    <string name="p_emailss">Email</string>
    <string name="p_psw">Password</string>
    <string name="p_pin">PIN</string>
    <string name="p_chnagepsw">Change Password</string>
    <string name="p_registeredUser">Register User</string>
    <string name="p_feesetup">Fee Setup</string>
    <string name="p_fundTransfer">Fund Transfer</string>
    <string name="p_passbook">Pass Book</string>
    <string name="p_moneytransfer">Money Transfers</string>
    <string name="p_walletdetail">Wallet Details</string>
    <string name="p_addPayee">Add Payee</string>
    <string name="p_deletepayee">Delete Payee</string>
    <string name="p_walledpasswbook">Wallet Passbook</string>
    <string name="p_UtilityService">Utility Service</string>
    <string name="p_prepaidMobile">Prepaid Mobile</string>
    <string name="p_postpaidMobile">Postpaid Mobile</string>
    <string name="p_DTH">DTH</string>
    <string name="p_electricty">Electricity</string>
    <string name="p_telephone">Telephone</string>
    <string name="p_recharge">Recharge and Bill Payments</string>
    <string name="p_bc">BC Fund Transfers</string>
    <string name="p_travel">Travel and Insurance</string>
    <string name="p_mpos">MPOS / MATM / AEPS</string>
    <string name="p_name">Enter Sender Name*</string>
    <string name="p_namecust">Enter Customer Name*</string>
    <string name="p_benname">Enter Beneficiary Name</string>
    <string name="p_otp">Enter OTP</string>
    <string name="p_account">Enter Sender Account No.</string>
    <string name="p_recaccount">Enter Receiver Account No.</string>
    <string name="p_amm_trans">Amount to Transfer</string>
    <string name="p_benaccount">Enter Beneficiary Account No.</string>
    <string name="p_ifsc">Enter Sender IFSC</string>
    <string name="p_amount">Enter Amount</string>
    <string name="p_tramount">Enter Transfer Amount</string>
    <string name="p_transtionid">Enter Bank Transaction Id</string>
    <string name="p_address">Enter Address</string>
    <string name="p_addressss">Address</string>
    <string name="p_remark">Enter Remarks</string>
    <string name="p_remarks">Remarks</string>
    <string name="p_submit">Travel and Insurance</string>
    <string name="user_details">User Details</string>
    <string name="p_category">Agent Category</string>
    <string name="p_branchname">Enter Branch Name</string>
    <string name="p_branchcode">Enter Branch Code</string>

    <string name="p_beneficiaryId">Bene Id</string>
    <string name="p_beneficiaryName">Receiver Name</string>
    <string name="p_accountId">Account Id</string>
    <string name="p_accountName">Account Name</string>
    <string name="p_names">Name</string>
    <string name="p_payeenames">Payee Name</string>
    <string name="p_ServiceFee">ServiceFee</string>
    <string name="p_statFee">Message</string>
    <string name="p_sendnames">Sender No.</string>
    <string name="p_date1">To Date</string>
    <string name="p_date2">From Date</string>
    <string name="p_date1for">To(yyyy/MM/dd)</string>
    <string name="p_datefor">To(dd/MM/yyyy)</string>
    <string name="p_dater">Deposit Date(dd/MM/yyyy)</string>
    <string name="p_date2for">From(yyyy/MM/dd)</string>

    <string name="p_comnames">Company Name</string>
    <string name="p_requestid">Request ID</string>
    <string name="p_txnamount">TXN Amount</string>
    <string name="p_status">Status</string>
    <string name="p_creditreq">Generate Credit Request</string>
    <string name="pchist">Channel History</string>
    <string name="p_req">Register User</string>
    <string name="agentName">Agent Name</string>
    <string name="creditID">CreditID</string>
    <string name="agentBalance">Agent Balance</string>
    <string name="notverified">This is a Non - Verified Beneficiary, We recommend to verify the account. Any transaction done to this Beneficiary, company will not be responsible for incorrect account transfer.</string>
    <string name="p_accountno">AC No</string>
    <string name="link">HTML Link</string>
    <string name="p_payeeaccountno">Payee Account</string>
    <string name="cgst">CGST</string>
    <string name="igst">IGST</string>
    <string name="sgst">SGST</string>
    <string name="p_ifsccode">IFSC</string>
    <string name="p_bank">Bank</string>
    <string name="p_bankname">Bank Name</string>
    <string name="isverified">Is Verified</string>
    <string name="p_payeebank">Payee Bank</string>
    <string name="p_rrn">RRN</string>
    <string name="p_amounts">Amount</string>
    <string name="p_bal">Balance</string>
    <string name="createdOn">CreatedOn</string>
    <string name="p_transid">TXN ID</string>
    <string name="p_reqamounts">Request Amount</string>
    <string name="p_reqtype">Recharge Type</string>
    <string name="p_txnamounts">Txn Amount</string>
    <string name="txnid">Transaction ID</string>
    <string name="txnStatus">Txn Status</string>

    <string name="sertype">Service Type</string>
    <string name="sstype">Service Type</string>
    <string name="txndate">TXN Date</string>
    <string name="txniddate">TXN ID/Date</string>
    <string name="txncrdrAmount">TXN/CRDR Amount</string>
    <string name="txnAmount">TXN Amount</string>
    <string name="rrnNo">RRN No</string>

    <string name="openingclosingBalance">Opening/Closing Bal.</string>
    <string name="txnsettlestatus">TXN/Settle Status</string>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="dialogue_message">Hello, %1$s! You have new messages.</string>
    <string name="prompt_getadteerror">Error in geting data,try again...</string>
    <string name="prepaid">PrePaid</string>
    <string name="aeps1cashwithdraw">Cash Withdrawal</string>
    <string name="aeps2cashwithdraw">Cash Withdrawal</string>
    <string name="aeps1balenq">Balance Enquiry</string>
    <string name="aeps2balenq">Balance Enquiry</string>
    <string name="postpaid">PostPaid</string>

    <string name="bc1id">BC1</string>
    <string name="bc2id">BC2</string>

    <string name="msg_double_click_to_exit">Press again to close</string>

    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="responseTimeOutTrans">Response Timeout. To check the transaction status please contact tech support."</string>
    <string name="responseTimeOut">Response Timeout, Please try again..."</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="title_activity_matm">MatmActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
