<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:orientation="horizontal"
        android:weightSum="800">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="300"
            android:inputType="text"
            android:text="@string/p_bankname"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_sendname_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_names"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:orientation="horizontal"
        android:weightSum="800">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="300"
            android:inputType="text"
            android:text="@string/title_accountno"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_name_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_names"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:orientation="horizontal"
        android:weightSum="800">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="300"
            android:inputType="text"
            android:text="@string/title_accountname"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_bank_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_bank"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:orientation="horizontal"
        android:weightSum="800">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="300"
            android:inputType="text"
            android:text="@string/txnAmount"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_account_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_accountno"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:orientation="horizontal"
        android:weightSum="800">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="300"
            android:inputType="text"
            android:text="@string/rrnNo"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_amount_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_bank"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3sp"
        android:orientation="horizontal"
        android:weightSum="800">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="300"
            android:inputType="text"
            android:text="@string/p_statFee"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bt_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_names"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>