<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/btn_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_accountno"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/btn_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_names"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/btn_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="570"
            android:onClick="onClick"
            android:text="@string/p_bank"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_amount_ben"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p_tramount"
            android:inputType="number"
            android:textSize="18dp" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>